Flushed out cityimages page

--- a/cityimages.html
+++ b/cityimages.html
@@ -33,11 +33,12 @@
 </header>
 <!--Main Content-->
     <main>
-        <ul class="flex-container">
+        <ul>
             <li class="flex-item"><img src="images/cityview.jpg" alt="cityview of Chongqing" width="700" height="393"/></li>
             <li class="flex-item"><img src="images/hongyadong.jpg" alt="hongyadong picture" width="700" height="393"/></li>
             <li class="flex-item"><img src="images/lizi station.jpg" alt="lizi station picture" width="700" height="393"/></li>
             <li class="flex-item"><img src="images/hotpot.jpg" alt="chongqing hotpot picture" width="700" height="393"/></li>
+            <li class="flex-item"><img src="images/tower.jpg" alt="tower picture" width="600" height="700"/></li>
 
         </ul>
     </main>
